--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,18 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  http: 
+  provider:
+  flutter_sizer:
+  shared_preferences:
+  another_flushbar: 
+  google_fonts: 6.1.0
+  flutter_svg: 
+  expandable:
+  date_picker_timeline:
+  persistent_bottom_nav_bar_v2:
+  intl:
+  path: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -59,9 +71,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
